# tubac

./: .gitignore  020_TuBaC.sln  README.md
020_TuBaC/: 020_TuBaC.vcxproj  020_TuBaC.vcxproj.filters  CMakeLists.txt  ReadMe.txt  compile_source.cmd
020_TuBaC/include/: algorithm.h  basic_array.h  command_line.h  config.h  context.h  generator.h  grammar.h  number_type_base.h  number_type_integer.h  reactor.h  runtime_base.h  runtime_integer.h  stack.h  synthesizer.h  targetver.h  token.h  token_provider.h  variable_token.h  zero_page_token.h
020_TuBaC/src/: 020_TuBaC.cpp  basic_array.cpp  command_line.cpp  config.cpp  context.cpp  generator.cpp  number_type_base.cpp  number_type_integer.cpp  reactor.cpp  runtime_base.cpp  runtime_integer.cpp  stack.cpp  synthesizer.cpp  token.cpp  token_provider.cpp  variable_token.cpp  zero_page_token.cpp
tests/: CMakeLists.txt  ReadMe.txt  tests.vcxproj  tests.vcxproj.filters
tests/include/: exceptions.h  process_executor.h  process_group_executor.h
tests/src/: process_executor.cpp  process_group_executor.cpp  tests.cpp
tests/suites/binary_operations/: and.txt  exor.txt  or.txt
tests/suites/end/: test1.txt  test2.txt
tests/suites/exec/: test1.txt  test2.txt  test3.txt
tests/suites/gosub/: test1.txt
tests/suites/goto/: test1.txt
tests/suites/if_then/: complex1.txt  complex2.txt  complex3.txt  simple1.txt  simple2.txt  simple3.txt  simple4.txt  simple5.txt  simple6.txt  simple7.txt
tests/suites/input/: single_integer.txt
tests/suites/integer_arithmetic/: decimal.txt  (+2 more)
tests/tmp/: readme.txt
tests/tools/: mads
(+98 files in other folders)
